--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>CLUE</title>
-    <meta name="description" content="Starter Projects">
+    <meta name="description" content="Connected Bio Spaces">
     <link rel="shortcut icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   </head>
