First pass at UI canvas
{16143827]

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>CLUE</title>
+    <title>Connected Bio</title>
     <meta name="description" content="Connected Bio Spaces">
     <link rel="shortcut icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
