Update left nav panel based on new UI specs
New font sizes and faces, hover states, button icons. positions, colors.
[#162294526]

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Connected Bio Spaces">
     <link rel="shortcut icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
   </head>
   <body>
     <svg aria-hidden="true" style="position: absolute; width: 0; height: 0; overflow: hidden;" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -93,6 +94,35 @@
         <path d="M12.5,18h-12C0.2,18,0,17.8,0,17.5v-3C0,14.2,0.2,14,0.5,14h12c0.3,0,0.5,0.2,0.5,0.5v3C13,17.8,12.8,18,12.5,18z"/>
         <path d="M17.5,4h-17C0.2,4,0,3.8,0,3.5v-3C0,0.2,0.2,0,0.5,0l17,0C17.8,0,18,0.2,18,0.5v3C18,3.8,17.8,4,17.5,4z"/>
         <path d="M14.5,11h-14C0.2,11,0,10.8,0,10.5v-3C0,7.2,0.2,7,0.5,7h14C14.8,7,15,7.2,15,7.5v3C15,10.8,14.8,11,14.5,11z"/>
+      </symbol>
+      <symbol id="icon-explore-populations" viewBox="0 0 17 15">
+        <title>explore-populations</title>
+        <g>
+          <circle cx="3.5" cy="3.5" r="2.5"/>
+        </g>
+        <g>
+          <circle cx="13.5" cy="6.5" r="2.5"/>
+        </g>
+        <g>
+          <circle cx="6.5" cy="11.5" r="2.5"/>
+        </g>
+      </symbol>
+      <symbol id="icon-explore-breeding" viewBox="0 0 17 15">
+        <title>explore-breeding</title>
+        <g>
+          <circle cx="4" cy="7" r="3"/>
+        </g>
+        <g>
+          <circle cx="13" cy="7" r="3"/>
+        </g>
+      </symbol>
+      <symbol id="icon-explore-organism" viewBox="0 0 17 15">
+        <title>explore-organism</title>
+        <circle cx="8.5" cy="7.5" r="3.5"/>
+      </symbol>
+      <symbol id="icon-explore-dna" viewBox="0 0 17 15">
+        <title>explore-dna</title>
+        <circle cx="8.5" cy="7.5" r="3.5"/>
       </symbol>
       </defs>
     </svg>
