--- a/src/index.html
+++ b/src/index.html
@@ -124,6 +124,49 @@
         <title>explore-dna</title>
         <circle cx="8.5" cy="7.5" r="3.5"/>
       </symbol>
+      <symbol id="icon-run" viewBox="0 0 44 28">
+        <title>run</title>
+        <g transform="translate(0.000000,28.000000) scale(0.100000,-0.100000)">
+        <path d="M117 253 c-11 -10 -8 -206 3 -223 8 -13 19 -10 75 20 85 46 139 83
+        138 95 0 12 -172 114 -194 115 -9 0 -19 -3 -22 -7z"/>
+        </g>
+      </symbol>
+      <symbol id="icon-reset" viewBox="0 0 44 28">
+        <title>reset</title>
+        <g transform="translate(0.000000,28.000000) scale(0.100000,-0.100000)">
+        <path d="M104 247 c-10 -28 1 -220 14 -225 8 -2 12 10 12 42 0 27 5 46 11 46
+        6 0 45 -20 86 -46 42 -25 83 -44 92 -42 13 3 17 20 19 98 3 105 -2 140 -21
+        140 -6 0 -48 -23 -92 -49 -44 -27 -83 -47 -87 -45 -5 3 -8 25 -8 50 0 42 -15
+        59 -26 31z"/>
+        </g>
+      </symbol>
+      <symbol id="icon-pause" viewBox="0 0 44 28">
+        <title>pause</title>
+        <g transform="translate(0.000000,28.000000) scale(0.100000,-0.100000)">
+        <path d="M125 254 c-21 -21 -22 -201 -1 -230 12 -15 18 -17 33 -8 15 9 19 27
+        21 105 2 52 0 104 -2 115 -8 29 -32 37 -51 18z"/>
+        <path d="M265 254 c-21 -21 -22 -201 -1 -230 12 -15 18 -17 33 -8 15 9 19 27
+        21 105 2 52 0 104 -2 115 -8 29 -32 37 -51 18z"/>
+        </g>
+      </symbol>
+      <symbol id="icon-add" viewBox="0 0 44 28">
+        <title>add</title>
+        <g transform="translate(0.000000,28.000000) scale(0.100000,-0.100000)">
+        <path d="M110 140 l0 -130 115 0 115 0 0 130 0 130 -115 0 -115 0 0 -130z"/>
+        </g>
+      </symbol>
+      <symbol id="icon-inspect" viewBox="0 0 44 28">
+        <title>inspect</title>
+        <g transform="translate(0.000000,28.000000) scale(0.100000,-0.100000)">
+        <path d="M110 140 l0 -130 115 0 115 0 0 130 0 130 -115 0 -115 0 0 -130z"/>
+        </g>
+      </symbol>
+      <symbol id="icon-collect" viewBox="0 0 44 28">
+        <title>collect</title>
+        <g transform="translate(0.000000,28.000000) scale(0.100000,-0.100000)">
+        <path d="M110 140 l0 -130 115 0 115 0 0 130 0 130 -115 0 -115 0 0 -130z"/>
+        </g>
+      </symbol>
       </defs>
     </svg>
     <div id="app"></div>
