--- a/src/index.html
+++ b/src/index.html
@@ -126,28 +126,20 @@
       </symbol>
       <symbol id="icon-run" viewBox="0 0 44 28">
         <title>run</title>
-        <g transform="translate(0.000000,28.000000) scale(0.100000,-0.100000)">
-        <path d="M117 253 c-11 -10 -8 -206 3 -223 8 -13 19 -10 75 20 85 46 139 83
-        138 95 0 12 -172 114 -194 115 -9 0 -19 -3 -22 -7z"/>
+        <g id="run">
+          <path d="M33.51,12.27L14.49,1.28c-1.33-0.77-3,0.19-3,1.73v21.97c0,1.54,1.67,2.5,3,1.73l19.02-10.99
+            C34.84,14.96,34.84,13.04,33.51,12.27z"/>
         </g>
       </symbol>
       <symbol id="icon-reset" viewBox="0 0 44 28">
         <title>reset</title>
-        <g transform="translate(0.000000,28.000000) scale(0.100000,-0.100000)">
-        <path d="M104 247 c-10 -28 1 -220 14 -225 8 -2 12 10 12 42 0 27 5 46 11 46
-        6 0 45 -20 86 -46 42 -25 83 -44 92 -42 13 3 17 20 19 98 3 105 -2 140 -21
-        140 -6 0 -48 -23 -92 -49 -44 -27 -83 -47 -87 -45 -5 3 -8 25 -8 50 0 42 -15
-        59 -26 31z"/>
-        </g>
+        <path d="M33.51,3.13c0-1.56-1.71-2.52-3.05-1.7l-14.96,9.2V3c0-1.1-0.9-2-2-2h-1c-1.1,0-2,0.9-2,2v22c0,1.1,0.9,2,2,2h1
+        c1.1,0,2-0.9,2-2v-7.62l14.96,9.2c1.33,0.82,3.05-0.14,3.05-1.7L33.51,3.13z"/>
       </symbol>
       <symbol id="icon-pause" viewBox="0 0 44 28">
         <title>pause</title>
-        <g transform="translate(0.000000,28.000000) scale(0.100000,-0.100000)">
-        <path d="M125 254 c-21 -21 -22 -201 -1 -230 12 -15 18 -17 33 -8 15 9 19 27
-        21 105 2 52 0 104 -2 115 -8 29 -32 37 -51 18z"/>
-        <path d="M265 254 c-21 -21 -22 -201 -1 -230 12 -15 18 -17 33 -8 15 9 19 27
-        21 105 2 52 0 104 -2 115 -8 29 -32 37 -51 18z"/>
-        </g>
+        <path d="M16.5,27h-3c-1.1,0-2-0.9-2-2V3c0-1.1,0.9-2,2-2h3c1.1,0,2,0.9,2,2v22C18.5,26.1,17.6,27,16.5,27z"/>
+        <path d="M30.5,27h-3c-1.1,0-2-0.9-2-2V3c0-1.1,0.9-2,2-2h3c1.1,0,2,0.9,2,2v22C32.5,26.1,31.6,27,30.5,27z"/>
       </symbol>
       <symbol id="icon-add" viewBox="0 0 44 28">
         <title>add</title>
