Add three-button definitions for 2up; add protein
This

1. Changes the `show[Space]Graph` property in `ui` to be a string
   representing the current space, "instructions", "data" or "information"
2. Makes the 2-up display responsible for showing the three icons, and
   allows them to be disabled
3. Updates the population space to use the new 2-up properties
4. Updates the organism space to use the 2-up properties and show a default
   protein if "information" is selected.

[#162242098]

--- a/src/index.html
+++ b/src/index.html
@@ -11,89 +11,24 @@
   <body>
     <svg aria-hidden="true" style="position: absolute; width: 0; height: 0; overflow: hidden;" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
       <defs>
-      <symbol id="icon-unshare" viewBox="0 0 32 32">
-      <title>unshare</title>
-      <path d="M22.7 7.7l-1.2 2.5c1.5 1.5 2.5 3.5 2.5 5.8 0 4.4-3.6 8-8 8-0.3 0-0.6 0-0.9-0.1l-0.9 1.9c0.6 0.1 1.2 0.1 1.8 0.1 9 0 15-8.9 15-10 0-0.7-3.2-5.6-8.3-8.2z"></path>
-      <path d="M16 22c0 0 0 0 0 0 3.3 0 6-2.7 6-6 0-1.5-0.5-2.8-1.4-3.8l-4.6 9.8z"></path>
-      <path d="M19.7 3.3l-1.4 3c-0.7-0.2-1.5-0.3-2.3-0.3-9 0-15 8.9-15 10 0 0.8 3.3 6 8.8 8.5l-1.1 2.3 2.8 1.3 11-23.5-2.8-1.3zM8 16c0-4.4 3.6-8 8-8 0.5 0 1 0 1.4 0.1l-0.9 1.9c-0.1 0-0.3 0-0.5 0-1.5 0-2.8 0.5-3.8 1.4 0.4-0.2 0.8-0.4 1.3-0.4 0.9 0 1.6 0.4 2.1 1.1l-1.8 3.9c-0.1 0-0.2 0-0.3 0-1.4 0-2.5-1.1-2.5-2.5 0-0.5 0.1-1 0.4-1.3-0.9 1-1.4 2.4-1.4 3.8 0 1.7 0.7 3.2 1.8 4.2l-0.9 1.9c-1.8-1.4-2.9-3.6-2.9-6.1z"></path>
-      </symbol>
-      <symbol id="icon-share" viewBox="0 0 32 32">
-      <title>share</title>
-      <path d="M16 10c-1.5 0-2.8 0.5-3.8 1.4 0.4-0.2 0.8-0.4 1.3-0.4 1.4 0 2.5 1.1 2.5 2.5s-1.1 2.5-2.5 2.5-2.5-1.1-2.5-2.5c0-0.5 0.1-1 0.4-1.3-0.9 1-1.4 2.4-1.4 3.8 0 3.3 2.7 6 6 6s6-2.7 6-6-2.7-6-6-6z"></path>
-      <path d="M16 6c-9 0-15 8.9-15 10s6 10 15 10 15-8.9 15-10c0-1.1-6-10-15-10zM16 24c-4.4 0-8-3.6-8-8s3.6-8 8-8 8 3.6 8 8-3.6 8-8 8z"></path>
-      </symbol>
-      <symbol id="icon-edit" viewBox="0 0 19 19">
-        <title>edit</title>
-        <path d="M15.6 6.6l-1.2 1.2c-.1.1-.3.1-.4 0L11.2 5c-.1-.1-.1-.3 0-.4l1.2-1.2c.5-.5 1.2-.5 1.7 0l1.5 1.5c.5.5.5 1.2 0 1.7zM10.2 5.5l-6.7 6.7-.5 3.1c-.1.4.3.8.7.7l3.1-.5 6.7-6.7c.1-.1.1-.3 0-.4l-2.8-2.8c-.2-.2-.4-.2-.5-.1z"/>
-      </symbol>
-      <symbol id="icon-copy-only" viewBox="0 0 19 19">
-          <title>copy-only</title>
-        <path d="M6 14c-.6 0-1-.4-1-1V7H4c-.6 0-1 .4-1 1v7c0 .6.4 1 1 1h7c.6 0 1-.4 1-1v-1H6z"/>
-        <path d="M15 12H8c-.6 0-1-.4-1-1V4c0-.6.4-1 1-1h7c.6 0 1 .4 1 1v7c0 .6-.4 1-1 1z"/>
-      <symbol id="icon-text-tool" viewBox="0 0 36 34">
-        <title>text-tool</title>
-        <path d="M27.8 27h-2.9c-.3 0-.6-.1-.8-.2-.2-.2-.4-.4-.5-.6l-1.5-4.1h-8.3l-1.5 4.1c-.1.2-.2.4-.4.6-.2.2-.5.3-.8.3H8.2l7.9-20h3.8L27.8 27zm-13-7.6h6.4l-2.4-6.7c-.1-.3-.2-.6-.4-1-.1-.4-.3-.8-.4-1.3-.1.5-.3.9-.4 1.3-.1.4-.2.8-.4 1.1l-2.4 6.6z"/>
-      </symbol>
-      <symbol id="icon-image-tool" viewBox="0 0 36 34">
-        <title>image-tool</title>
-        <circle cx="12.3" cy="12.3" r="2.3"/>
-        <path d="M10 23.8h16V17l-2.7-2.8c-.3-.3-.7-.3-1 0L15.5 21l-2.3-2.3c-.3-.3-.7-.3-1 0L10 21v2.8z"/>
-        <path d="M27 8c.5 0 1 .5 1 1v16c0 .5-.5 1-1 1H9c-.5 0-1-.5-1-1V9c0-.5.5-1 1-1h18m0-2H9C7.3 6 6 7.4 6 9v16c0 1.6 1.3 3 3 3h18c1.7 0 3-1.4 3-3V9c0-1.6-1.3-3-3-3z"/>
-      </symbol>
-      <symbol id="icon-select-tool" viewBox="0 0 36 34">
-        <title>select-tool</title>
-        <path d="M24 19.6h-3.7l2 4.8c.1.3 0 .7-.3.8l-1.7.8c-.3.1-.7 0-.8-.3l-1.9-4.5-3 3.1c-.4.4-1.1.1-1.1-.5V8.6c0-.6.7-.9 1.1-.5l10 10.3c.2.5-.1 1.2-.6 1.2z"/>
-      </symbol>
-      <symbol id="icon-delete-tool" viewBox="0 0 36 34">
-        <title>delete-tool</title>
-        <path d="M24.4 12L23 10.6c-.2-.2-.5-.2-.7 0L18 14.9l-4.2-4.2c-.2-.2-.5-.2-.7 0L11.6 12c-.2.2-.2.5 0 .7l4.2 4.2-4.2 4.2c-.2.2-.2.5 0 .7l1.4 1.4c.2.2.5.2.7 0l4.2-4.2 4.2 4.2c.2.2.5.2.7 0l1.4-1.4c.2-.2.2-.5 0-.7L20.1 17l4.2-4.2c.3-.2.3-.6.1-.8z"/>
-        <path d="M27 6H9C7.4 6 6 7.3 6 9v16c0 1.6 1.4 3 3 3h18c1.7 0 3-1.4 3-3V9c0-1.7-1.3-3-3-3zm1 19c0 .5-.5 1-1 1H9c-.5 0-1-.5-1-1V9c0-.5.5-1 1-1h18c.5 0 1 .5 1 1v16z"/>
-      </symbol>
-      <symbol id="icon-geometry-tool" viewBox="0 0 36 34">
-        <title>graph-tool</title>
-        <path d="M27 8c.5 0 1 .5 1 1v16c0 .5-.5 1-1 1H9c-.5 0-1-.5-1-1V9c0-.5.5-1 1-1h18m0-2H9C7.4 6 6 7.4 6 9v16c0 1.6 1.4 3 3 3h18c1.6 0 3-1.4 3-3V9c0-1.6-1.4-3-3-3z"/>
-        <path d="M25 21v-1h-1v1h-2v-1h-1v1h-2v-1h-1v1h-2v-1h-1v1h-2v-2h1v-1h-1v-2h1v-1h-1v-2h1v-1h-1v-2h-1v11h-2v1h2v2h1v-2h13v-1z"/>
-      </symbol>
-      <symbol id="icon-publish-hover" viewBox="0 0 40 36">
-        <title>publish-hover</title>
-        <path d="M32 5h-6.8l3.4 4c.2.3.3.6.4.9h4v18c0 .6-.4 1-1 1H8c-.6 0-1-.4-1-1V10h3.9c.1-.3.2-.6.4-.9l3.4-4H8C6.3 5 5 6.3 5 8v20c0 1.7 1.3 3 3 3h24c1.7 0 3-1.3 3-3V8c0-1.7-1.3-3-3-3z"/>
-        <path d="M28.8 12c-.3.5-.7.8-1.2 1H30v13H10V13h2.4c-.5-.2-.9-.5-1.2-1H9v15h22V12h-2.2z"/>
-        <path d="M27.1 10.3L20 2l-7.1 8.3c-.3.4 0 .9.4.9h2.2v3.9c0 .3.2.5.5.5h8c.3 0 .5-.2.5-.5v-3.9h2.2c.4 0 .7-.5.4-.9z"/>
-      </symbol>
-      <symbol id="icon-publish" viewBox="0 0 40 36">
-        <title>publish</title>
-        <path d="M32 5h-8.5l4.3 5H33v18c0 .6-.4 1-1 1H8c-.6 0-1-.4-1-1V10h5.2l4.3-5H8C6.3 5 5 6.3 5 8v20c0 1.7 1.3 3 3 3h24c1.7 0 3-1.3 3-3V8c0-1.7-1.3-3-3-3z"/>
-        <path d="M29.1 12c.1.3.1.7.1 1h.8v13H10V13h.8c0-.3 0-.7.1-1H9v15h22V12h-1.9z"/>
-        <path d="M27.1 12.3L20 4l-7.1 8.3c-.3.4 0 .9.4.9h2.2v3.9c0 .3.2.5.5.5h8c.3 0 .5-.2.5-.5v-3.9h2.2c.4 0 .7-.5.4-.9z"/>
-      </symbol>
-      <symbol id="icon-up4" viewBox="0 0 40 36">
-        <title>up4</title>
-        <path d="M32 5H8C6.3 5 5 6.3 5 8v20c0 1.7 1.3 3 3 3h24c1.7 0 3-1.3 3-3V8c0-1.7-1.3-3-3-3zm1 23c0 .6-.4 1-1 1H8c-.6 0-1-.4-1-1V10h26v18z"/>
-        <path d="M20.5 12H9v15h22V12H20.5zM10 13h9.5v4.5H18V19h-8v-6zm0 13v-6h8v.5c0 .6.4 1 1 1h.5V26H10zm20 0h-9.5v-4.5h.5c.6 0 1-.4 1-1V20h8v6zm-8-7v-.5c0-.6-.4-1-1-1h-.5V13H30v6h-8z"/>
-      </symbol>
-      <symbol id="icon-up2" viewBox="0 0 40 36">
-        <title>up2</title>
-        <path d="M14 13v13h-4V13h4m1-1H9v15h6V12z"/>
-        <path d="M16 5H8C6.3 5 5 6.3 5 8v20c0 1.7 1.3 3 3 3h8c1.7 0 3-1.3 3-3V8c0-1.7-1.3-3-3-3zm1 23c0 .6-.4 1-1 1H8c-.6 0-1-.4-1-1V10h10v18zM28.4 26h.8v1h-.8zM26.7 26h.8v1h-.8zM25 15.5h1v.9h-1zM25 20.8h1v.9h-1zM25 17.3h1v.9h-1zM25 19.1h1v.9h-1zM25 24.3h1v.9h-1zM25 22.6h1v.9h-1zM25 13.8h1v.9h-1zM28.4 12h.8v1h-.8zM26.7 12h.8v1h-.8zM30 15.5h1v.9h-1zM30 20.8h1v.9h-1zM30 22.6h1v.9h-1zM30 17.3h1v.9h-1zM30 24.3h1v.9h-1zM30 19.1h1v.9h-1zM30 13.8h1v.9h-1zM30 12h1v1h-1zM25 12h1v1h-1zM25 26h1v1h-1zM30 26h1v1h-1z"/>
-        <g>
-          <path d="M32 5h-8c-1.7 0-3 1.3-3 3v20c0 1.7 1.3 3 3 3h8c1.7 0 3-1.3 3-3V8c0-1.7-1.3-3-3-3zm1 23c0 .6-.4 1-1 1h-8c-.6 0-1-.4-1-1V10h10v18z"/>
-        </g>
-      </symbol>
-      <symbol id="icon-up1" viewBox="0 0 40 36">
-        <title>up1</title>
-        <path d="M32 5H8C6.3 5 5 6.3 5 8v20c0 1.7 1.3 3 3 3h24c1.7 0 3-1.3 3-3V8c0-1.7-1.3-3-3-3zm1 23c0 .6-.4 1-1 1H8c-.6 0-1-.4-1-1V10h26v18z"/>
-        <path d="M31 12H9v15h22V12zm-1 14H10V13h20v13z"/>
-      </symbol>
-      <symbol id="icon-show-graph" viewBox="0 0 18 18">
+      <symbol id="icon-show-data" viewBox="0 0 18 18">
         <title>show-graph</title>
         <path d="M6.5,8l2,4l7-7l2.1,2.1c0.2,0.2,0.4,0,0.4-0.2V0h-6.9c-0.2,0-0.3,0.3-0.2,0.4L13,2.5L9.5,6l-2-4L4,5.5v-5C4,0.2,3.8,0,3.5,0
           h-3C0.2,0,0,0.2,0,0.5V14v4h4h13.5c0.3,0,0.5-0.2,0.5-0.5v-3c0-0.3-0.2-0.5-0.5-0.5H4v-3.5L6.5,8z"/>
       </symbol>
-      <symbol id="icon-show-data" viewBox="0 0 18 18">
+      <symbol id="icon-show-instructions" viewBox="0 0 18 18">
         <title>show-data</title>
         <path d="M12.5,18h-12C0.2,18,0,17.8,0,17.5v-3C0,14.2,0.2,14,0.5,14h12c0.3,0,0.5,0.2,0.5,0.5v3C13,17.8,12.8,18,12.5,18z"/>
         <path d="M17.5,4h-17C0.2,4,0,3.8,0,3.5v-3C0,0.2,0.2,0,0.5,0l17,0C17.8,0,18,0.2,18,0.5v3C18,3.8,17.8,4,17.5,4z"/>
         <path d="M14.5,11h-14C0.2,11,0,10.8,0,10.5v-3C0,7.2,0.2,7,0.5,7h14C14.8,7,15,7.2,15,7.5v3C15,10.8,14.8,11,14.5,11z"/>
+      </symbol>
+      <symbol id="icon-show-information" viewBox="0 0 18 18">
+        <title>show-data</title>
+        <path d="M18.5,1h-17C1.22,1,1,1.22,1,1.5v17C1,18.78,1.22,19,1.5,19h17c0.28,0,0.5-0.22,0.5-0.5v-17C19,1.22,18.78,1,18.5,1z
+          M8.89,3.48c0.34-0.35,0.76-0.52,1.24-0.52c0.49,0,0.9,0.17,1.24,0.52c0.34,0.35,0.51,0.76,0.51,1.25s-0.17,0.91-0.51,1.25
+          c-0.34,0.35-0.75,0.52-1.24,0.52c-0.5,0-0.92-0.18-1.25-0.53c-0.34-0.35-0.5-0.77-0.5-1.24C8.37,4.25,8.55,3.83,8.89,3.48z
+          M12.99,16.44H7.02V15.4h0.22c0.55,0,0.9-0.1,1.05-0.29s0.22-0.53,0.22-1.01v-2.91c0-0.48-0.08-0.82-0.22-1.01
+          C8.14,9.99,7.79,9.9,7.24,9.9H7.02V8.86l4.65-0.74v5.99c0,0.5,0.08,0.83,0.23,1.02s0.52,0.28,1.09,0.28V16.44z"/>
       </symbol>
       <symbol id="icon-explore-populations" viewBox="0 0 17 15">
         <title>explore-populations</title>
