Update UI based on UI spec
-add SVG definitions for icons
-add x close icon for collect button
-update collect buttons x close and index positions
-update collect buttons x close and index colors
-add padding in right panel when displaying instructions
-add correct panel spacing in 4-up display
-add correct hover effect on collect button x close and collect circle button
-add correct collect button state when placing an organism in the organism view
-update collect button x close background shape when hovering over button
-unify transition times

[#162495890]

--- a/src/index.html
+++ b/src/index.html
@@ -12,18 +12,18 @@
     <svg aria-hidden="true" style="position: absolute; width: 0; height: 0; overflow: hidden;" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
       <defs>
       <symbol id="icon-show-data" viewBox="0 0 18 18">
-        <title>show-graph</title>
+        <title>show-data</title>
         <path d="M6.5,8l2,4l7-7l2.1,2.1c0.2,0.2,0.4,0,0.4-0.2V0h-6.9c-0.2,0-0.3,0.3-0.2,0.4L13,2.5L9.5,6l-2-4L4,5.5v-5C4,0.2,3.8,0,3.5,0
           h-3C0.2,0,0,0.2,0,0.5V14v4h4h13.5c0.3,0,0.5-0.2,0.5-0.5v-3c0-0.3-0.2-0.5-0.5-0.5H4v-3.5L6.5,8z"/>
       </symbol>
       <symbol id="icon-show-instructions" viewBox="0 0 18 18">
-        <title>show-data</title>
+        <title>show-instructions</title>
         <path d="M12.5,18h-12C0.2,18,0,17.8,0,17.5v-3C0,14.2,0.2,14,0.5,14h12c0.3,0,0.5,0.2,0.5,0.5v3C13,17.8,12.8,18,12.5,18z"/>
         <path d="M17.5,4h-17C0.2,4,0,3.8,0,3.5v-3C0,0.2,0.2,0,0.5,0l17,0C17.8,0,18,0.2,18,0.5v3C18,3.8,17.8,4,17.5,4z"/>
         <path d="M14.5,11h-14C0.2,11,0,10.8,0,10.5v-3C0,7.2,0.2,7,0.5,7h14C14.8,7,15,7.2,15,7.5v3C15,10.8,14.8,11,14.5,11z"/>
       </symbol>
       <symbol id="icon-show-information" viewBox="0 0 18 18">
-        <title>show-data</title>
+        <title>show-information</title>
         <path d="M18.5,1h-17C1.22,1,1,1.22,1,1.5v17C1,18.78,1.22,19,1.5,19h17c0.28,0,0.5-0.22,0.5-0.5v-17C19,1.22,18.78,1,18.5,1z
           M8.89,3.48c0.34-0.35,0.76-0.52,1.24-0.52c0.49,0,0.9,0.17,1.24,0.52c0.34,0.35,0.51,0.76,0.51,1.25s-0.17,0.91-0.51,1.25
           c-0.34,0.35-0.75,0.52-1.24,0.52c-0.5,0-0.92-0.18-1.25-0.53c-0.34-0.35-0.5-0.77-0.5-1.24C8.37,4.25,8.55,3.83,8.89,3.48z
@@ -157,6 +157,45 @@
         c2.33-0.16,4.64-0.56,6.97-0.72c0.86-0.06,1.81,0.12,2.61,0.45C38.92,3.44,39.85,3.93,41.87,4.73z"/>
       <path d="M17.48,10.42c2.81-1.35,5.08-4.11,8.6-2.72c-1.21,1.08-2.43,2.2-3.7,3.26c-0.55,0.46-1.48,0.81-2.33,0.07
         c-0.29,0.09-0.5,0.16-0.65,0.19C18.63,11.38,18,11.26,17.48,10.42z"/>
+      </symbol>
+      <symbol id="icon-collect-cursor" viewBox="0 0 25 20">
+        <title>collect-cursor</title>
+        <g id="Layer_1">
+        </g>
+        <g id="Layer_43_copy">
+          <path d="M20.85,0c1.53-0.05,5.62,7.72,3.45,7.9c-1.67,0.12-2.4,0.12-3.68,0.13c0.16,2.03-1.11,3.4-2.28,4.82
+            c-1.33,1.61-2.22,3.4-2.48,5.49c-0.07,0.56-0.22,1.12-0.33,1.67c-1.81-0.09-2.9-1.64-2.56-3.72c0.16-0.95,0.58-1.86,0.77-2.81
+            c0.21-1.05,0.52-2.16,0.37-3.18c-0.23-1.6-1.72-2.51-3.54-2.47c-2.54,0.06-4.45,0.76-5.92,3.29c-0.79,1.35-1.4,2.18-1.92,2.77
+            s-1.54,0.94-2.2,0.58c-0.9-0.48-0.52-0.98,0.14-2.29c0.91-1.8,1.23-2.71,1.93-4.22c0.45-0.97,1.79-2.39,3.13-3.19
+            C7.52,3.67,9.2,2.4,10.99,1.32c0.66-0.4,1.49-0.64,2.27-0.71C17.98,0.18,18.91,0.19,20.85,0z"/>
+          <path d="M3.75,14.51c1.69-2.22,2.36-5.35,5.73-5.69c-0.53,1.35-1.03,2.74-1.61,4.11c-0.25,0.59-0.85,1.25-1.83,1.01
+            c-0.19,0.19-0.33,0.33-0.44,0.42C5.06,14.8,4.51,14.96,3.75,14.51z"/>
+        </g>
+      </symbol>
+      <symbol id="icon-inspect-cursor" viewBox="0 0 20 20">
+        <title>inspect-cursor</title>
+        <g id="Layer_1">
+        </g>
+        <g id="inspect_data_orig_copy_4">
+          <path class="st0" d="M10,0C4.48,0,0,4.48,0,10s4.48,10,10,10c5.52,0,10-4.48,10-10S15.52,0,10,0L10,0z"/>
+          <path d="M10,2c4.41,0,8,3.59,8,8c0,4.41-3.59,8-8,8s-8-3.59-8-8C2,5.59,5.59,2,10,2 M10,0C4.48,0,0,4.48,0,10s4.48,10,10,10
+            c5.52,0,10-4.48,10-10S15.52,0,10,0L10,0z"/>
+          <path d="M11.5,8.01v5.39c0,0.45,0.07,0.75,0.21,0.92s0.47,0.25,0.98,0.25v0.93H7.31v-0.93h0.2c0.5,0,0.81-0.09,0.94-0.26
+            s0.2-0.48,0.2-0.91v-2.62c0-0.43-0.07-0.74-0.2-0.91S8.01,9.61,7.52,9.61h-0.2V8.67L11.5,8.01z M8.54,4.96
+            c0-0.43,0.16-0.81,0.47-1.12s0.68-0.47,1.12-0.47c0.44,0,0.81,0.16,1.12,0.47s0.46,0.69,0.46,1.12s-0.15,0.81-0.46,1.12
+            s-0.68,0.47-1.11,0.47c-0.45,0-0.83-0.16-1.13-0.48S8.54,5.38,8.54,4.96z"/>
+        </g>
+      </symbol>
+      <symbol id="icon-check" viewBox="0 0 14 12">
+        <title>check</title>
+        <path d="M12.83,2.38l-1.31-1.16c-0.21-0.18-0.52-0.16-0.71,0.05L5.58,7.22l-2.6-2.27C2.77,4.77,2.46,4.79,2.28,5L1.12,6.31
+        C0.94,6.52,0.96,6.84,1.17,7.02l4.29,3.75c0.21,0.18,0.52,0.16,0.7-0.05l6.71-7.64C13.06,2.88,13.04,2.56,12.83,2.38z"/>
+      </symbol>
+      <symbol id="icon-close" viewBox="0 0 12 12">
+        <title>close</title>
+        <path d="M7.94,6l2.91-2.91c0.2-0.2,0.2-0.51,0-0.71L9.62,1.15c-0.2-0.2-0.51-0.2-0.71,0L6,4.06L3.09,1.15c-0.2-0.2-0.51-0.2-0.71,0
+        L1.15,2.38c-0.2,0.2-0.2,0.51,0,0.71L4.06,6L1.15,8.91c-0.2,0.2-0.2,0.51,0,0.71l1.24,1.24c0.2,0.2,0.51,0.2,0.71,0L6,7.94
+        l2.91,2.91c0.2,0.2,0.51,0.2,0.71,0l1.24-1.24c0.2-0.2,0.2-0.51,0-0.71L7.94,6z"/>
       </symbol>
       </defs>
     </svg>
