Update organism control styling
[#162326777]
[#162321695]

--- a/src/index.html
+++ b/src/index.html
@@ -197,6 +197,50 @@
         L1.15,2.38c-0.2,0.2-0.2,0.51,0,0.71L4.06,6L1.15,8.91c-0.2,0.2-0.2,0.51,0,0.71l1.24,1.24c0.2,0.2,0.51,0.2,0.71,0L6,7.94
         l2.91,2.91c0.2,0.2,0.51,0.2,0.71,0l1.24-1.24c0.2-0.2,0.2-0.51,0-0.71L7.94,6z"/>
       </symbol>
+      <symbol id="icon-zoomin" viewBox="0 0 44 28">
+        <title>zoomin</title>
+        <g transform="translate(0.000000,28.000000) scale(0.100000,-0.100000)"
+        stroke="none">
+        <path d="M190 210 l0 -40 -40 0 c-38 0 -40 -2 -40 -30 0 -28 2 -30 40 -30 l40
+        0 0 -40 c0 -38 2 -40 30 -40 28 0 30 2 30 40 l0 40 40 0 c38 0 40 2 40 30 0
+        28 -2 30 -40 30 l-40 0 0 40 c0 38 -2 40 -30 40 -28 0 -30 -2 -30 -40z"/>
+        </g>
+      </symbol>
+      <symbol id="icon-zoomout" viewBox="0 0 44 28">
+        <title>zoomout</title>
+        <g transform="translate(0.000000,28.000000) scale(0.100000,-0.100000)"
+        stroke="none">
+        <path d="M110 140 l0 -30 110 0 110 0 0 30 0 30 -110 0 -110 0 0 -30z"/>
+        </g>
+      </symbol>
+      <symbol id="icon-measure" viewBox="0 0 44 28">
+        <title>measure</title>
+        <g transform="translate(0.000000,28.000000) scale(0.100000,-0.100000)"
+        stroke="none">
+        <path d="M260 245 c-16 -17 -27 -22 -34 -15 -14 14 -36 12 -36 -3 0 -16 101
+        -117 118 -117 15 0 16 26 2 35 -6 4 0 18 15 37 30 35 31 49 7 71 -26 23 -45
+        21 -72 -8z"/>
+        <path d="M141 126 c-52 -56 -62 -84 -36 -106 23 -19 56 -5 110 50 38 39 47 52
+        37 62 -10 10 -23 2 -62 -37 -27 -27 -53 -46 -57 -42 -4 4 15 29 41 56 42 43
+        53 71 27 71 -5 0 -31 -24 -60 -54z"/>
+        </g>
+      </symbol>
+      <symbol id="icon-add-substance" viewBox="0 0 44 28">
+        <title>add-subtance</title>
+        <g transform="translate(0.000000,28.000000) scale(0.100000,-0.100000)"
+        stroke="none">
+        <path d="M90 250 c0 -13 -7 -20 -20 -20 -11 0 -20 -7 -20 -15 0 -8 9 -15 20
+        -15 13 0 20 -7 20 -20 0 -11 7 -20 15 -20 8 0 15 9 15 20 0 13 7 20 20 20 11
+        0 20 7 20 15 0 8 -9 15 -20 15 -13 0 -20 7 -20 20 0 11 -7 20 -15 20 -8 0 -15
+        -9 -15 -20z"/>
+        <path d="M280 245 c-16 -17 -27 -22 -34 -15 -14 14 -36 12 -36 -3 0 -16 101
+        -117 118 -117 15 0 16 26 2 35 -6 4 0 18 15 37 30 35 31 49 7 71 -26 23 -45
+        21 -72 -8z"/>
+        <path d="M161 126 c-52 -56 -62 -84 -36 -106 23 -19 56 -5 110 50 38 39 47 52
+        37 62 -10 10 -23 2 -62 -37 -27 -27 -53 -46 -57 -42 -4 4 15 29 41 56 42 43
+        53 71 27 71 -5 0 -31 -24 -60 -54z"/>
+        </g>
+      </symbol>
       </defs>
     </svg>
     <div id="app"></div>
