Update organism toolbar styling
[#163965874]

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,10 @@
         <path d="M17.5,4h-17C0.2,4,0,3.8,0,3.5v-3C0,0.2,0.2,0,0.5,0l17,0C17.8,0,18,0.2,18,0.5v3C18,3.8,17.8,4,17.5,4z"/>
         <path d="M14.5,11h-14C0.2,11,0,10.8,0,10.5v-3C0,7.2,0.2,7,0.5,7h14C14.8,7,15,7.2,15,7.5v3C15,10.8,14.8,11,14.5,11z"/>
       </symbol>
+      <symbol id="icon-inspect-protein" viewBox="0 0 44 21">
+        <title>inspect-protein</title>
+        <path d="M11.32,1.91a1.4,1.4,0,0,0-.76,0l-.18.78-1.15.36-.89-.83.15-.66a.88.88,0,0,0-.21-.22A.82.82,0,0,0,8,1.22h0a.77.77,0,0,0-.37,0,.61.61,0,0,0-.18.05.11.11,0,0,0-.08,0,.67.67,0,0,0-.37-.07.7.7,0,0,0-.25.05,1,1,0,0,0-.37.14.76.76,0,0,0-.21.19.7.7,0,0,0-.32-.05.71.71,0,0,0-.35.1.81.81,0,0,0-.3.21c0,.07-.09.14-.14.21a1.13,1.13,0,0,0-.12.51v0a.94.94,0,0,0-.49.65,1,1,0,0,0,.29.95.77.77,0,0,0,.07.16.75.75,0,0,0,.09.48,1.88,1.88,0,0,0,.41.51,1.42,1.42,0,0,0,0,.79,2,2,0,0,0,.09.22v0a1.44,1.44,0,0,0-.27.59,1.18,1.18,0,0,0,.08.74v0c0,.1-.09.25-.1.28A1.64,1.64,0,0,0,5,8.81a1.65,1.65,0,0,0-.24.54,2.57,2.57,0,0,0-.06.68,1.38,1.38,0,0,1-.17.58,1.38,1.38,0,0,0-.1.85s0,.2.07.31h0l0,.05a1.35,1.35,0,0,0-.2.27,1.08,1.08,0,0,0-.08.77,2.3,2.3,0,0,0,.18.43s0,0,0,0a1.07,1.07,0,0,0,.39,1.36,1.82,1.82,0,0,0,1.29.4,1.77,1.77,0,0,0,.4,0,1.09,1.09,0,0,0,0,.36s0,0,0,.06v.07a1.35,1.35,0,0,0-.23.88,1,1,0,0,0,.2.54,1,1,0,0,0,.68.6.92.92,0,0,0,1.26.18h0a1.1,1.1,0,0,0,.85-.55v0l0,0,0,0,.06,0,.06-.1.07-.1a2.12,2.12,0,0,0,.11-.21,1.43,1.43,0,0,0,.23-.2c.27-.3.52-1.06,1.08-.93s.41.47.42.81-.07.1,0,.69a2,2,0,0,0,.1,1.05,1,1,0,0,0,.05.45.89.89,0,0,0,.7.56l.19.13a.7.7,0,0,0,.51.44.67.67,0,0,0,.63-.15,1,1,0,0,0,.48.12.94.94,0,0,0,.86-.7.92.92,0,0,0,.87-.44h0a1,1,0,0,0-.16-1.17v-.05a.91.91,0,0,0,.54-.7s.66,1.28,1.28,1.43l.93.21a.9.9,0,0,0,.71.18l.95-.15a.93.93,0,0,0,.76-.74,2.16,2.16,0,0,0,.38-.81A2.07,2.07,0,0,0,21,15.48a.86.86,0,0,0,0-.28h0a.9.9,0,0,0-.66-.63c-.22-.17-.09-.44-.37-.51l-.48-.29-.09-.57a2.07,2.07,0,0,0-.83-.55l.22-.17a.93.93,0,0,0,.17-1.3l0-.06,0-.07a1,1,0,0,0,.45-.55.94.94,0,0,0-.12-.79l.08-.06a.94.94,0,0,0,.2-1.28l.18-.81.25-.4a1,1,0,0,0,0-1.06,2,2,0,0,0-.14-.55.91.91,0,0,0-.78-1,1.86,1.86,0,0,0-.34-.19.91.91,0,0,0-.77-.3l0,0s-.37,0-.38,0a.48.48,0,0,0-.28.1.58.58,0,0,0-.2.18H17a.75.75,0,0,0-.79.67l-.07,0A1.51,1.51,0,0,0,16,4.87.81.81,0,0,0,16,4.56.94.94,0,0,0,15.13,4L15,3.91a1,1,0,0,0-.72-.42l-.13,0h0a.51.51,0,0,0-.3,0,.56.56,0,0,0-.28.1.57.57,0,0,0-.15.12h0a.74.74,0,0,0-.56.08.76.76,0,0,0,0-.15,1.07,1.07,0,0,0-.31-.81.68.68,0,0,0-.4-.19c0-.14-.09-.12-.16-.23a1,1,0,0,0-.58-.43Z"/><path d="M30.5,2.9a7.6,7.6,0,1,1-7.6,7.6,7.61,7.61,0,0,1,7.6-7.6m0-1.9A9.5,9.5,0,1,0,40,10.5,9.5,9.5,0,0,0,30.5,1Z"/><path d="M31.92,8.61v5.11a1.44,1.44,0,0,0,.2.88c.14.16.45.23.94.23v.89H28v-.89h.19c.47,0,.77-.08.9-.25a1.49,1.49,0,0,0,.19-.86V11.24a1.44,1.44,0,0,0-.2-.87c-.12-.16-.42-.24-.89-.24H28V9.24Zm-2.81-2.9a1.5,1.5,0,0,1,.44-1.07,1.47,1.47,0,0,1,1.06-.44,1.4,1.4,0,0,1,1.06.44,1.46,1.46,0,0,1,.44,1.07,1.48,1.48,0,0,1-.44,1.07,1.46,1.46,0,0,1-1.06.44,1.39,1.39,0,0,1-1.07-.46A1.46,1.46,0,0,1,29.11,5.71Z"/>
+      </symbol>
       <symbol id="icon-show-information" viewBox="0 0 18 18">
         <title>show-information</title>
         <path d="M18.5,1h-17C1.22,1,1,1.22,1,1.5v17C1,18.78,1.22,19,1.5,19h17c0.28,0,0.5-0.22,0.5-0.5v-17C19,1.22,18.78,1,18.5,1z
@@ -169,49 +173,21 @@
         L1.15,2.38c-0.2,0.2-0.2,0.51,0,0.71L4.06,6L1.15,8.91c-0.2,0.2-0.2,0.51,0,0.71l1.24,1.24c0.2,0.2,0.51,0.2,0.71,0L6,7.94
         l2.91,2.91c0.2,0.2,0.51,0.2,0.71,0l1.24-1.24c0.2-0.2,0.2-0.51,0-0.71L7.94,6z"/>
       </symbol>
-      <symbol id="icon-zoomin" viewBox="0 0 44 28">
+      <symbol id="icon-zoomin" viewBox="0 0 18 18">
         <title>zoomin</title>
-        <g transform="translate(0.000000,28.000000) scale(0.100000,-0.100000)"
-        stroke="none">
-        <path d="M190 210 l0 -40 -40 0 c-38 0 -40 -2 -40 -30 0 -28 2 -30 40 -30 l40
-        0 0 -40 c0 -38 2 -40 30 -40 28 0 30 2 30 40 l0 40 40 0 c38 0 40 2 40 30 0
-        28 -2 30 -40 30 l-40 0 0 40 c0 38 -2 40 -30 40 -28 0 -30 -2 -30 -40z"/>
-        </g>
+        <path d="M16.5,7H11V1.5a.5.5,0,0,0-.5-.5h-3a.5.5,0,0,0-.5.5V7H1.5a.5.5,0,0,0-.5.5v3a.5.5,0,0,0,.5.5H7v5.5a.5.5,0,0,0,.5.5h3a.5.5,0,0,0,.5-.5V11h5.5a.5.5,0,0,0,.5-.5v-3A.5.5,0,0,0,16.5,7Z"/>
       </symbol>
-      <symbol id="icon-zoomout" viewBox="0 0 44 28">
+      <symbol id="icon-zoomout" viewBox="0 0 18 18">
         <title>zoomout</title>
-        <g transform="translate(0.000000,28.000000) scale(0.100000,-0.100000)"
-        stroke="none">
-        <path d="M110 140 l0 -30 110 0 110 0 0 30 0 30 -110 0 -110 0 0 -30z"/>
-        </g>
+        <rect x="1" y="7" width="16" height="4" rx="0.5"/>
       </symbol>
-      <symbol id="icon-measure" viewBox="0 0 44 28">
+      <symbol id="icon-measure" viewBox="0 0 44 21">
         <title>measure</title>
-        <g transform="translate(0.000000,28.000000) scale(0.100000,-0.100000)"
-        stroke="none">
-        <path d="M260 245 c-16 -17 -27 -22 -34 -15 -14 14 -36 12 -36 -3 0 -16 101
-        -117 118 -117 15 0 16 26 2 35 -6 4 0 18 15 37 30 35 31 49 7 71 -26 23 -45
-        21 -72 -8z"/>
-        <path d="M141 126 c-52 -56 -62 -84 -36 -106 23 -19 56 -5 110 50 38 39 47 52
-        37 62 -10 10 -23 2 -62 -37 -27 -27 -53 -46 -57 -42 -4 4 15 29 41 56 42 43
-        53 71 27 71 -5 0 -31 -24 -60 -54z"/>
-        </g>
+        <path d="M9.4,20,7.82,17.23l2.28-2,.72-1.93a2.8,2.8,0,0,1,1.24-1.45l9-5.12,1,1.74-9,5.12a.83.83,0,0,0-.35.41L12,16a1.93,1.93,0,0,1-.54.78l-.92.81,1.16-.38a1.92,1.92,0,0,1,.95-.06l2.05.37a.81.81,0,0,0,.53-.09l9-5.12,1,1.73-9,5.12a2.72,2.72,0,0,1-1.87.32l-2.05-.37ZM33.89,9.44l-3.05,1.73.43.76a1.13,1.13,0,0,1-.42,1.54l-2.37,1.34a1.13,1.13,0,0,1-1.54-.42L21.63,5a1.13,1.13,0,0,1,.42-1.54l2.37-1.35A1.14,1.14,0,0,1,26,2.57l.43.75,3.05-1.73a4.51,4.51,0,0,1,4.45,7.85Z"/>
       </symbol>
-      <symbol id="icon-add-substance" viewBox="0 0 44 28">
+      <symbol id="icon-add-substance" viewBox="0 0 44 21">
         <title>add-subtance</title>
-        <g transform="translate(0.000000,28.000000) scale(0.100000,-0.100000)"
-        stroke="none">
-        <path d="M90 250 c0 -13 -7 -20 -20 -20 -11 0 -20 -7 -20 -15 0 -8 9 -15 20
-        -15 13 0 20 -7 20 -20 0 -11 7 -20 15 -20 8 0 15 9 15 20 0 13 7 20 20 20 11
-        0 20 7 20 15 0 8 -9 15 -20 15 -13 0 -20 7 -20 20 0 11 -7 20 -15 20 -8 0 -15
-        -9 -15 -20z"/>
-        <path d="M280 245 c-16 -17 -27 -22 -34 -15 -14 14 -36 12 -36 -3 0 -16 101
-        -117 118 -117 15 0 16 26 2 35 -6 4 0 18 15 37 30 35 31 49 7 71 -26 23 -45
-        21 -72 -8z"/>
-        <path d="M161 126 c-52 -56 -62 -84 -36 -106 23 -19 56 -5 110 50 38 39 47 52
-        37 62 -10 10 -23 2 -62 -37 -27 -27 -53 -46 -57 -42 -4 4 15 29 41 56 42 43
-        53 71 27 71 -5 0 -31 -24 -60 -54z"/>
-        </g>
+        <path id="substance" d="M9.76,19.36,8.53,17.19l2.16-1.74.64-1.56a2.41,2.41,0,0,1,1.05-1.18l4.26-2.41c1.4,3.71,5.54,3.62,7.07,3.51l-8.1,4.59a2.48,2.48,0,0,1-1.55.3l-1.68-.25Z" style="opacity:0.5"/><path id="eye_dropper" data-name="eye dropper" d="M9.4,20,7.82,17.23l2.28-2,.72-1.93a2.8,2.8,0,0,1,1.24-1.45l9-5.12,1,1.74-9,5.12a.83.83,0,0,0-.35.41L12,16a1.93,1.93,0,0,1-.54.78l-.92.81,1.16-.38a1.92,1.92,0,0,1,.95-.06l2.05.37a.81.81,0,0,0,.53-.09l9-5.12,1,1.73-9,5.12a2.72,2.72,0,0,1-1.87.32l-2.05-.37ZM33.89,9.44l-3.05,1.73.43.76a1.13,1.13,0,0,1-.42,1.54l-2.37,1.34a1.13,1.13,0,0,1-1.54-.42L21.63,5a1.13,1.13,0,0,1,.42-1.54l2.37-1.35A1.14,1.14,0,0,1,26,2.57l.43.75,3.05-1.73a4.51,4.51,0,0,1,4.45,7.85Z"/>
       </symbol>
       <symbol id="icon-logo" viewBox="0 0 388 67">
         <title>logo</title>
