--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,7 @@
         <path d="M16.5,27h-3c-1.1,0-2-0.9-2-2V3c0-1.1,0.9-2,2-2h3c1.1,0,2,0.9,2,2v22C18.5,26.1,17.6,27,16.5,27z"/>
         <path d="M30.5,27h-3c-1.1,0-2-0.9-2-2V3c0-1.1,0.9-2,2-2h3c1.1,0,2,0.9,2,2v22C32.5,26.1,31.6,27,30.5,27z"/>
       </symbol>
-      <symbol id="icon-add" viewBox="0 0 44 28">
+      <symbol id="icon-add-hawks" viewBox="0 0 44 28">
         <title>add</title>
         <path d="M43,11.84c0.05-0.29-3.04-1.71-3.04-1.71c1.99,0.94,2.36,0.12,2.36,0.12c-0.36-0.65-3.09-1.43-3.09-1.43
         c0.47,0.08,0.8-0.45,0.8-0.45s-1.29-0.82-2.21-0.98c-0.92-0.16-2.88,0.08-3.4,0.29c-0.52,0.2-0.87-0.45-1.85-0.33
