Add target-zoom styling on cell level, add mode

--- a/src/index.html
+++ b/src/index.html
@@ -199,6 +199,18 @@
         <title>zoomin</title>
         <path d="M16.5,7H11V1.5a.5.5,0,0,0-.5-.5h-3a.5.5,0,0,0-.5.5V7H1.5a.5.5,0,0,0-.5.5v3a.5.5,0,0,0,.5.5H7v5.5a.5.5,0,0,0,.5.5h3a.5.5,0,0,0,.5-.5V11h5.5a.5.5,0,0,0,.5-.5v-3A.5.5,0,0,0,16.5,7Z"/>
       </symbol>
+      <symbol id="icon-zoomin-target" viewBox="0 0 21 21">
+        <title>target zoom in</title>
+        <polygon points="20.56 20.56 17 20.56 17 18.44 18.44 18.44 18.44 17 20.56 17 20.56 20.56"/>
+        <path d="M15.38,20.56H11.31V18.44h4.07Zm-5.69,0H5.62V18.44H9.69Z"/>
+        <polygon points="4 20.56 0.44 20.56 0.44 17 2.56 17 2.56 18.44 4 18.44 4 20.56"/>
+        <path d="M2.56,15.38H.44V11.31H2.56Zm0-5.69H.44V5.62H2.56Z"/>
+        <polygon points="2.56 4 0.44 4 0.44 0.44 4 0.44 4 2.56 2.56 2.56 2.56 4"/>
+        <path d="M15.38,2.56H11.31V.44h4.07Zm-5.69,0H5.62V.44H9.69Z"/>
+        <polygon points="20.56 4 18.44 4 18.44 2.56 17 2.56 17 0.44 20.56 0.44 20.56 4"/>
+        <path d="M20.56,15.38H18.44V11.31h2.12Zm0-5.69H18.44V5.62h2.12Z"/>
+        <path d="M16.12,9H12V4.87a.38.38,0,0,0-.38-.37H9.37A.38.38,0,0,0,9,4.87V9H4.87a.38.38,0,0,0-.37.37v2.25a.38.38,0,0,0,.37.38H9v4.12a.38.38,0,0,0,.37.38h2.25a.38.38,0,0,0,.38-.38V12h4.12a.38.38,0,0,0,.38-.38V9.37A.38.38,0,0,0,16.12,9Z"/>
+      </symbol>
       <symbol id="icon-zoomout" viewBox="0 0 18 18">
         <title>zoomout</title>
         <rect x="1" y="7" width="16" height="4" rx="0.5"/>
