--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,14 @@
   <body>
     <svg aria-hidden="true" style="position: absolute; width: 0; height: 0; overflow: hidden;" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
       <defs>
+      <symbol id="icon-exit-fullscreen" viewBox="0 0 28 28">
+        <title>exit fullscreen</title>
+        <path d="M10.5,17.5V28H7V23.47l-4,4L.51,25l4-4H0V17.5Zm7,10.5H21V23.47l4,4L27.49,25l-4-4H28V17.5H17.5Zm6-21H28v3.5H17.5V0H21V4.53l4-4L27.49,3ZM7,0h3.5V10.5H0V7H4.53l-4-4L3,.51l4,4Z"/>
+      </symbol>
+      <symbol id="icon-enter-fullscreen" viewBox="0 0 28 28">
+        <title>enter fullscreen</title>
+        <path d="M6,24.5H10.5V28H0V17.5H3.5V22l4-4L10,20.49ZM24.5,22l-4-4L18,20.49l4,4H17.5V28H28V17.5H24.5Zm-7-22V3.5H22l-4,4L20.49,10l4-4V10.5H28V0ZM0,10.5H3.5V6l4,4L10,7.51l-4-4H10.5V0H0Z"/>
+      </symbol>
       <symbol id="icon-show-data" viewBox="0 0 18 18">
         <title>show-data</title>
         <path d="M6.5,8l2,4l7-7l2.1,2.1c0.2,0.2,0.4,0,0.4-0.2V0h-6.9c-0.2,0-0.3,0.3-0.2,0.4L13,2.5L9.5,6l-2-4L4,5.5v-5C4,0.2,3.8,0,3.5,0
