--- a/src/mice-authoring.html
+++ b/src/mice-authoring.html
@@ -10,6 +10,81 @@
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500,700&display=swap" rel="stylesheet">
   </head>
   <body>
+    <svg aria-hidden="true" style="position: absolute; width: 0; height: 0; overflow: hidden;" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+      <defs>
+        <symbol id="icon-logo" viewBox="0 0 388 67">
+          <title>logo</title>
+          <style type="text/css">
+            .logost0{fill:#39B54A;}
+            .logost1{fill:#FAC10D;}
+            .logost2{fill:#008FD7;}
+          </style>
+          <path class="logost0" d="M21.2,66c-6.6,0-11.6-1.8-15.1-5.5C2.7,56.8,1,51.6,1,44.9c0-3.4,0.5-6.3,1.6-9c1.1-2.6,2.5-4.9,4.3-6.7
+            c1.8-1.8,4-3.2,6.6-4.1c2.5-0.9,5.3-1.4,8.2-1.4c1.7,0,3.3,0.1,4.7,0.4c1.4,0.3,2.6,0.5,3.7,0.9c1.1,0.3,1.9,0.7,2.6,1
+            c0.7,0.4,1.2,0.6,1.5,0.8l-2.6,7.4c-1.2-0.7-2.7-1.2-4.4-1.7c-1.7-0.5-3.5-0.7-5.6-0.7c-1.4,0-2.8,0.2-4.1,0.7
+            c-1.3,0.5-2.5,1.2-3.6,2.3c-1,1-1.9,2.4-2.5,4c-0.6,1.6-0.9,3.6-0.9,6c0,1.9,0.2,3.6,0.6,5.2c0.4,1.6,1.1,3,2,4.2
+            c0.9,1.2,2.1,2.1,3.6,2.8c1.5,0.7,3.3,1,5.4,1c1.3,0,2.5-0.1,3.6-0.2c1.1-0.2,2-0.3,2.8-0.6c0.8-0.2,1.5-0.5,2.2-0.7
+            c0.6-0.3,1.2-0.5,1.7-0.8l2.5,7.3c-1.3,0.8-3.1,1.5-5.4,2.1C27,65.7,24.3,66,21.2,66z"/>
+          <path class="logost0" d="M68.2,49.7c0,2.4-0.4,4.6-1.1,6.6c-0.7,2-1.7,3.7-3,5.1c-1.3,1.4-2.9,2.5-4.8,3.3c-1.9,0.8-3.9,1.2-6.2,1.2
+            c-2.3,0-4.3-0.4-6.2-1.2c-1.9-0.8-3.4-1.9-4.8-3.3c-1.3-1.4-2.4-3.1-3.1-5.1c-0.7-2-1.1-4.2-1.1-6.6c0-2.4,0.4-4.6,1.1-6.6
+            c0.8-2,1.8-3.7,3.2-5.1c1.3-1.4,2.9-2.5,4.8-3.3c1.9-0.8,3.9-1.2,6.1-1.2c2.2,0,4.3,0.4,6.1,1.2c1.9,0.8,3.4,1.9,4.8,3.3
+            c1.3,1.4,2.4,3.1,3.1,5.1C67.8,45.1,68.2,47.3,68.2,49.7z M59.3,49.7c0-2.7-0.5-4.8-1.6-6.3c-1.1-1.5-2.6-2.3-4.6-2.3
+            c-2,0-3.5,0.8-4.6,2.3c-1.1,1.5-1.6,3.7-1.6,6.3c0,2.7,0.5,4.8,1.6,6.4c1.1,1.6,2.6,2.4,4.6,2.4c2,0,3.5-0.8,4.6-2.4
+            C58.8,54.6,59.3,52.4,59.3,49.7z"/>
+          <path class="logost0" d="M75,35.5c1.5-0.4,3.4-0.8,5.7-1.2c2.3-0.4,4.8-0.6,7.4-0.6c2.6,0,4.8,0.3,6.5,1c1.7,0.7,3.1,1.6,4.1,2.9
+            c1,1.2,1.7,2.7,2.2,4.4c0.4,1.7,0.6,3.6,0.6,5.7v17.4h-8.7V48.9c0-2.8-0.4-4.8-1.1-6c-0.7-1.2-2.1-1.8-4.2-1.8c-0.6,0-1.3,0-2,0.1
+            s-1.3,0.1-1.9,0.2v23.8H75V35.5z"/>
+          <path class="logost0" d="M109.5,35.5c1.5-0.4,3.4-0.8,5.7-1.2c2.3-0.4,4.8-0.6,7.4-0.6c2.6,0,4.8,0.3,6.5,1c1.7,0.7,3.1,1.6,4.1,2.9
+            c1,1.2,1.7,2.7,2.2,4.4c0.4,1.7,0.6,3.6,0.6,5.7v17.4h-8.7V48.9c0-2.8-0.4-4.8-1.1-6c-0.7-1.2-2.1-1.8-4.2-1.8c-0.6,0-1.3,0-2,0.1
+            s-1.3,0.1-1.9,0.2v23.8h-8.7V35.5z"/>
+          <path class="logost0" d="M142.5,50c0-2.7,0.4-5.1,1.3-7.2c0.8-2,1.9-3.8,3.3-5.1c1.4-1.4,2.9-2.4,4.7-3.1c1.8-0.7,3.6-1.1,5.5-1.1
+            c4.4,0,7.8,1.3,10.4,4c2.5,2.7,3.8,6.6,3.8,11.8c0,0.5,0,1.1-0.1,1.7c0,0.6-0.1,1.1-0.1,1.6h-19.8c0.2,1.8,1,3.2,2.5,4.3
+            c1.5,1.1,3.5,1.6,6,1.6c1.6,0,3.2-0.1,4.7-0.4c1.5-0.3,2.8-0.7,3.8-1.1l1.2,7.1c-0.5,0.2-1.1,0.5-1.9,0.7c-0.8,0.2-1.6,0.4-2.6,0.6
+            c-1,0.2-2,0.3-3.1,0.4c-1.1,0.1-2.2,0.2-3.3,0.2c-2.8,0-5.2-0.4-7.2-1.2c-2-0.8-3.7-1.9-5.1-3.4c-1.3-1.4-2.3-3.1-3-5.1
+            C142.9,54.4,142.5,52.3,142.5,50z M163,46.7c0-0.7-0.2-1.5-0.4-2.2c-0.2-0.7-0.5-1.3-1-1.9c-0.4-0.5-1-1-1.7-1.3
+            c-0.7-0.4-1.5-0.5-2.5-0.5c-1,0-1.8,0.2-2.5,0.5c-0.7,0.3-1.3,0.8-1.8,1.3c-0.5,0.5-0.8,1.2-1.1,1.9c-0.3,0.7-0.4,1.5-0.6,2.2H163z"
+            />
+          <path class="logost0" d="M176.8,49.8c0-2.2,0.4-4.3,1.1-6.3c0.7-2,1.8-3.7,3.1-5.1c1.4-1.5,3-2.6,5-3.5c1.9-0.9,4.2-1.3,6.7-1.3
+            c1.6,0,3.1,0.1,4.5,0.4c1.4,0.3,2.7,0.7,4,1.3l-1.8,7c-0.8-0.3-1.7-0.6-2.7-0.8c-1-0.2-2.1-0.4-3.3-0.4c-2.6,0-4.5,0.8-5.8,2.4
+            c-1.3,1.6-1.9,3.7-1.9,6.3c0,2.8,0.6,4.9,1.8,6.4c1.2,1.5,3.3,2.3,6.2,2.3c1.1,0,2.2-0.1,3.4-0.3c1.2-0.2,2.3-0.5,3.3-0.9l1.2,7.1
+            c-1,0.4-2.3,0.8-3.8,1.1c-1.5,0.3-3.2,0.5-5,0.5c-2.8,0-5.2-0.4-7.3-1.3c-2-0.8-3.7-2-5-3.4c-1.3-1.4-2.3-3.1-2.9-5.1
+            C177.1,54.2,176.8,52.1,176.8,49.8z"/>
+          <path class="logost0" d="M207.2,26.7l8.7-1.4v9.1h10.5v7.3h-10.5v10.8c0,1.8,0.3,3.3,1,4.4s1.9,1.6,3.9,1.6c0.9,0,1.9-0.1,2.9-0.3
+            c1-0.2,1.9-0.4,2.7-0.7l1.2,6.8c-1.1,0.4-2.2,0.8-3.5,1.1c-1.3,0.3-2.9,0.5-4.7,0.5c-2.4,0-4.3-0.3-5.9-1s-2.8-1.5-3.7-2.7
+            c-0.9-1.2-1.6-2.5-2-4.2c-0.4-1.6-0.6-3.5-0.6-5.4V26.7z"/>
+          <path class="logost0" d="M230.9,50c0-2.7,0.4-5.1,1.3-7.2c0.8-2,1.9-3.8,3.3-5.1c1.4-1.4,2.9-2.4,4.7-3.1s3.6-1.1,5.5-1.1
+            c4.4,0,7.8,1.3,10.4,4c2.5,2.7,3.8,6.6,3.8,11.8c0,0.5,0,1.1-0.1,1.7c0,0.6-0.1,1.1-0.1,1.6h-19.8c0.2,1.8,1,3.2,2.5,4.3
+            c1.5,1.1,3.5,1.6,6,1.6c1.6,0,3.2-0.1,4.7-0.4c1.5-0.3,2.8-0.7,3.8-1.1l1.2,7.1c-0.5,0.2-1.1,0.5-1.9,0.7c-0.8,0.2-1.6,0.4-2.6,0.6
+            c-1,0.2-2,0.3-3.1,0.4c-1.1,0.1-2.2,0.2-3.3,0.2c-2.8,0-5.2-0.4-7.2-1.2c-2-0.8-3.7-1.9-5.1-3.4c-1.3-1.4-2.3-3.1-3-5.1
+            C231.2,54.4,230.9,52.3,230.9,50z M251.3,46.7c0-0.7-0.2-1.5-0.4-2.2c-0.2-0.7-0.5-1.3-1-1.9c-0.4-0.5-1-1-1.7-1.3
+            c-0.7-0.4-1.5-0.5-2.5-0.5c-1,0-1.8,0.2-2.5,0.5c-0.7,0.3-1.3,0.8-1.8,1.3c-0.5,0.5-0.8,1.2-1.1,1.9c-0.3,0.7-0.4,1.5-0.6,2.2H251.3
+            z"/>
+          <path class="logost0" d="M293.7,64.2c-0.8,0.2-1.7,0.5-2.7,0.7c-1,0.2-2.1,0.4-3.2,0.6c-1.1,0.2-2.2,0.3-3.4,0.4
+            c-1.2,0.1-2.3,0.1-3.3,0.1c-2.5,0-4.8-0.4-6.8-1.1c-2-0.7-3.7-1.8-5-3.2c-1.4-1.4-2.4-3.1-3.1-5c-0.7-2-1.1-4.2-1.1-6.6
+            c0-2.5,0.3-4.7,0.9-6.8c0.6-2,1.5-3.7,2.7-5.1c1.2-1.4,2.6-2.5,4.3-3.2c1.7-0.7,3.6-1.1,5.8-1.1c1.2,0,2.3,0.1,3.2,0.4
+            c1,0.2,1.9,0.6,2.9,1V21.2l8.7-1.4V64.2z M274,49.6c0,2.7,0.6,4.9,1.8,6.5s3,2.5,5.4,2.5c0.8,0,1.5,0,2.2-0.1
+            c0.7-0.1,1.2-0.1,1.6-0.2V42.4c-0.5-0.4-1.3-0.6-2.1-0.9c-0.9-0.2-1.8-0.4-2.7-0.4C276,41.1,274,43.9,274,49.6z"/>
+          <path class="logost1" d="M316,65.7c-2.2,0-4.4-0.1-6.6-0.2c-2.2-0.1-4.5-0.5-6.9-1V25.2c1.9-0.4,3.9-0.6,6.1-0.8
+            c2.2-0.2,4.3-0.3,6.2-0.3c2.6,0,4.9,0.2,7.1,0.6c2.2,0.4,4,1,5.6,1.9c1.6,0.9,2.8,2.1,3.7,3.5c0.9,1.5,1.3,3.3,1.3,5.4
+            c0,3.2-1.6,5.8-4.7,7.7c2.6,1,4.3,2.3,5.3,4c0.9,1.7,1.4,3.6,1.4,5.7c0,4.3-1.6,7.5-4.7,9.6C326.7,64.6,322.1,65.7,316,65.7z
+            M311.4,40.6h4.4c2.8,0,4.8-0.4,6-1.1c1.2-0.7,1.8-1.9,1.8-3.5c0-1.6-0.6-2.8-1.9-3.5c-1.2-0.7-3.1-1-5.5-1c-0.8,0-1.6,0-2.5,0
+            c-0.9,0-1.7,0.1-2.4,0.1V40.6z M311.4,47.5V58c0.7,0.1,1.4,0.1,2.2,0.2s1.6,0.1,2.6,0.1c2.7,0,4.9-0.4,6.6-1.2
+            c1.7-0.8,2.5-2.2,2.5-4.3c0-1.9-0.7-3.2-2.1-4c-1.4-0.8-3.4-1.2-6-1.2H311.4z"/>
+          <rect x="341.3" y="34.4" class="logost1" width="8.7" height="30.8"/>
+          <path class="logost1" d="M387,49.7c0,2.4-0.4,4.6-1.1,6.6c-0.7,2-1.7,3.7-3,5.1c-1.3,1.4-2.9,2.5-4.8,3.3c-1.9,0.8-3.9,1.2-6.2,1.2
+            c-2.3,0-4.3-0.4-6.2-1.2c-1.9-0.8-3.4-1.9-4.8-3.3c-1.3-1.4-2.4-3.1-3.1-5.1c-0.7-2-1.1-4.2-1.1-6.6c0-2.4,0.4-4.6,1.1-6.6
+            s1.8-3.7,3.2-5.1c1.3-1.4,2.9-2.5,4.8-3.3c1.9-0.8,3.9-1.2,6.1-1.2c2.2,0,4.3,0.4,6.1,1.2c1.9,0.8,3.4,1.9,4.8,3.3
+            c1.3,1.4,2.4,3.1,3.1,5.1C386.6,45.1,387,47.3,387,49.7z M378.1,49.7c0-2.7-0.5-4.8-1.6-6.3c-1.1-1.5-2.6-2.3-4.6-2.3
+            s-3.5,0.8-4.6,2.3c-1.1,1.5-1.6,3.7-1.6,6.3c0,2.7,0.5,4.8,1.6,6.4c1.1,1.6,2.6,2.4,4.6,2.4s3.5-0.8,4.6-2.4
+            C377.5,54.6,378.1,52.4,378.1,49.7z"/>
+          <path class="logost2" d="M364.8,22.2c-1,0-1.9,0.5-2.5,1.3l-7.8-1.1c0-0.2,0-0.4,0-0.6c0-1.9-0.6-3.6-1.6-5.1L361,8
+            c0.5,0.3,1.1,0.4,1.7,0.4c2.1,0,3.7-1.7,3.7-3.7S364.8,1,362.7,1S359,2.7,359,4.7c0,0.5,0.1,1,0.3,1.5l-8.1,8.7
+            c-1.5-1.3-3.5-2-5.7-2c-3.4,0-6.3,1.9-7.9,4.6l-8-3.8c0.1-0.4,0.2-0.9,0.2-1.3c0-3.1-2.5-5.6-5.6-5.6s-5.6,2.5-5.6,5.6
+            s2.5,5.6,5.6,5.6c1.8,0,3.3-0.8,4.3-2.1l8.2,3.9c-0.1,0.6-0.2,1.3-0.2,2c0,5,4,9,9,9c3.9,0,7.2-2.5,8.4-5.9l7.8,1.1
+            c0.3,1.4,1.5,2.4,3,2.4c1.7,0,3.1-1.4,3.1-3.1C367.9,23.6,366.5,22.2,364.8,22.2z"/>
+        </symbol>
+      </defs>
+    </svg>
     <div id="app"></div>
   </body>
 </html>
