--- a/src/mice-authoring.html
+++ b/src/mice-authoring.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Connected Bio</title>
+    <title>Connected Bio: Mice Authoring</title>
     <meta name="description" content="Connected Bio Spaces: Mice Authoring">
     <meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1">
     <link rel="shortcut icon" href="favicon.ico">
@@ -82,6 +82,43 @@
             c-1.5-1.3-3.5-2-5.7-2c-3.4,0-6.3,1.9-7.9,4.6l-8-3.8c0.1-0.4,0.2-0.9,0.2-1.3c0-3.1-2.5-5.6-5.6-5.6s-5.6,2.5-5.6,5.6
             s2.5,5.6,5.6,5.6c1.8,0,3.3-0.8,4.3-2.1l8.2,3.9c-0.1,0.6-0.2,1.3-0.2,2c0,5,4,9,9,9c3.9,0,7.2-2.5,8.4-5.9l7.8,1.1
             c0.3,1.4,1.5,2.4,3,2.4c1.7,0,3.1-1.4,3.1-3.1C367.9,23.6,366.5,22.2,364.8,22.2z"/>
+        </symbol>
+        <symbol id="icon-reset" viewBox="0 0 24 24">
+          <title>Reset form to initial state</title>
+          <g fill-rule="evenodd">
+            <path fill-rule="nonzero" d="M12 3c-4.97 0-9 4.03-9 9H0l4 4 4-4H5c0-3.87 3.13-7 7-7s7 3.13 7 7-3.13 7-7 7c-1.51 0-2.91-.49-4.06-1.3l-1.42 1.44C8.04 20.3 9.94 21 12 21c4.97 0 9-4.03 9-9s-4.03-9-9-9z" transform="translate(-2054.000000, -78.000000) translate(1920.000000, 40.000000) translate(134.000000, 38.000000)"/>
+          </g>
+        </symbol>
+        <symbol id="icon-warning" viewBox="0 0 24 24">
+          <g fill="none" fill-rule="evenodd">
+            <path d="M0 0L24 0 24 24 0 24z" transform="translate(-2122.000000, -78.000000) translate(2122.000000, 78.000000)"/>
+            <path fill="#DE444B" fill-rule="nonzero" d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z" transform="translate(-2122.000000, -78.000000) translate(2122.000000, 78.000000)"/>
+          </g>
+        </symbol>
+        <symbol id="icon-add" viewBox="0 0 24 24">
+          <g fill-rule="evenodd">
+            <path fill-rule="nonzero" d="M19 13L13 13 13 19 11 19 11 13 5 13 5 11 11 11 11 5 13 5 13 11 19 11z" transform="translate(-2020.000000, -78.000000) translate(2020.000000, 78.000000)"/>
+          </g>
+        </symbol>
+        <symbol id="icon-delete" viewBox="0 0 24 24">
+          <g fill-rule="evenodd">
+            <path fill-rule="nonzero" d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z" transform="translate(-1986.000000, -78.000000) translate(1986.000000, 78.000000)"/>
+          </g>
+        </symbol>
+        <symbol id="icon-submit" viewBox="0 0 24 24">
+            <g fill-rule="evenodd">
+              <path fill-rule="nonzero" d="M5 4h14v2H5V4zm0 10h4v6h6v-6h4l-7-7-7 7zm8-2v6h-2v-6H9.83L12 9.83 14.17 12H13z" transform="translate(-2156.000000, -78.000000) translate(2156.000000, 78.000000)"/>
+            </g>
+        </symbol>
+        <symbol id="icon-copy" viewBox="0 0 24 24">
+          <title>Copy model URL to the clipboard</title>
+          <g fill-rule="evenodd">
+            <path fill-rule="nonzero" d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z" transform="translate(-2190.000000, -78.000000) translate(2190.000000, 78.000000)"/>
+          </g>
+        </symbol>
+        <symbol id="icon-open-external" viewBox="0 0 576 512">
+          <title>Open model in a new tab</title>
+          <path d="M 576 24 L 576 151.984 C 576 173.445 550.04 183.964 535.029 168.955 L 489.072 125.47 L 250.382 369.391 C 241.009 378.764 231.231 386.142 221.858 376.769 L 199.231 354.142 C 189.858 344.769 202.095 335.897 211.468 326.525 L 448.269 80.195 L 407.053 40.971 C 391.982 25.9 402.656 0 424.024 0 L 552 0 C 565.255 0 576 10.745 576 24 Z M 407.029 270.794 C 407.029 270.794 400 293.635 400 300 L 400 460.545 L 51.635 459.086 L 52.981 115.288 L 321.801 116.288 C 328.166 116.288 360.97 104.971 360.97 104.971 C 376.089 89.851 365.381 64 344 64 L 48 64 C 21.49 64 0 85.49 0 112 L 0 464 C 0 490.51 21.49 512 48 512 L 400 512 C 426.51 512 448 490.51 448 464 L 448 287.764 C 448 266.382 422.148 255.674 407.029 270.794 Z"/>
         </symbol>
       </defs>
     </svg>
